[project]
name = "unyprot"
version = "0.5.0"
description = "Easy Uniprot Python Object Collection Wrapper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyproteins>=2.1.1",
]

[project.scripts]
unyprot = "unyprot:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
